# BACKENDING3

./: README.md  README_RAILWAY.md  pyproject.toml  requirements.txt  start.sh
app/: auth.py  config.py  main.py
app/services/: scraper.py  verifier.py
app/utils/: phone.py
