[project]
name = "clickleads_backend"
version = "0.1.0"
description = "Backend for ClickLeads Google Local scraper + WhatsApp verifier"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "httpx==0.27.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "playwright==1.45.0",
]
